--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,4 @@
+@import './utilities', './btnConfig', './config';
 
 * {
   box-sizing: border-box;
@@ -17,9 +18,54 @@ img {
 
 a {
   text-decoration: none;
+  
 }
 
+
 .hero {
+  @include set-bg($primary-color);
+  height: 600px;
+
+  nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  ul {
+    display: flex;
+    list-style-type: none;
+  }
+
+  li {
+    padding: 15px;
+  }
+
+  a {
+    color: text-color-picker($primary-color);
+  }
+
+  a:hover {
+    color: $secondary-color;
+  }
+
+  &-content {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+
+    img {
+      width: 50%;
+    }
+
+    h1 {
+      font-size: 50px;
+      line-height: 1.2;
+    }
+  }
+
   // This is where the bulk of the SCSS styling needs to be done
 
   // Take a look at the other files we've built already. How can they be useful here?
